@startuml
!theme toy

enum Etat{
  Neuf
  Bon
  Abîmé
  Perdu
}

abstract class Ressource{
  code {key} : integer
  titre : string
  date_apparition : date
  editeur : string
  genre : string
  code_classification : integer
}

class Film{
  langue: string
  durée : integer
  synopsis : text
}
class Livre{
  isbn : integer
  résumé : string
  langue : string
}

class Musique{
  durée : integer
}

class Contributeur{
  nom : string
  prénom : string
  date_de_naissance : date
  nationalité : string
}

class Exemplaire{
  code {key} : integer
  disponibilité : boolean
  état : Etat
}

class Prêt{
  date : date
  durée : integer
}

abstract class Personne {
  nom : string
  prenom : string
  adresse : string
  email : string
}

class Adhérent{
  date_de_naissance : date
  téléphone : integer
  carte : string
  blacklisté : booléen
  suspendu : booléen
}

class Personnel{
  role_employe : string
}

class Compte_Utilisateur {
  login : string
  mdp : string
}

class Sanction{
}

class Retard{
  nb_jours : integer
}

class Détérioration{
  nv_etat: Etat
  cout: integer 
}



Retard --|> Sanction
Détérioration --|>  Sanction


Ressource <|-- Film
Ressource <|-- Livre
Ressource <|-- Musique

Livre "1..*" -down- "*" Contributeur : est ecrit par
Contributeur "1..*" -up "*" Musique : est composée par
Contributeur "1..*" -up "*" Musique : est interprétée par
Contributeur "1..*" -up "*" Film : est réalisé par
Contributeur "1..*" -up "*" Film : est joué par
Sanction  "*" - "1" Exemplaire

Ressource *-- "1..*" Exemplaire
Exemplaire "0..10" -- "0..1" Adhérent
(Exemplaire, Adhérent) .. Prêt
Exemplaire "*" -- "0..1" Adhérent : réserve

Personne "1" - "1" Compte_Utilisateur
Personne <|-- Adhérent
Personne <|-- Personnel

Sanction "*" -- "1" Adhérent : possède
@enduml